test/fixtures/astRegression/shouldSucceed/GenericMethodDeclarations.sand
pub class GenericMethodDeclarations {
    single<T>() {

    }

    complex<T, U extends T>() {

    }

    singleExplicitReturnType<T>(): void {

    }

    complexExplicitReturnType<T, U extends T>(): void {
        
    }
}