test/fixtures/astRegression/shouldFail/genericFunctionCall/NoArgs.sand
pub class NoArgs {
    noArgs() {
        foo<>()
    }
}